--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <style>
 body {
-    background: lightgreen;
-    font-family: Verdana;
+    background: #202A44;
+    font-family: #71797E;
 }  
 #content {
-    background: lightyellow;
+    background: #FFFFFF;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
@@ -30,21 +30,21 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
+        <h1>Jonathan Talley</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a freshman at Bob Jones University studying criminal justice with a minor in 
+            chemistry. I work for Public Safety Traffic as well as the BJU Post Office.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I attend Faith Baptist Church in Easley SC. My favorite website is  
+            <a href="https://www.youtube.com/@shilohandbros">here</a>, and you can email me  
+            <a href="mailto:jtall965@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy music, sports and hanging out with my friends.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Criminal Justice<br />
         Bob Jones University<br />
         Example image:
         <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
