--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ h3 {
         <h2>Freshman in Greenville, South Carolina</h2>
         
          <p>I am a freshman at Bob Jones University studying criminal justice with a minor in 
-            chemistry. I work for Public Safety Traffic as well as the BJU Post Office.</p>
+            chemistry. I work for Public Safety as a traffic officer, and also for the BJU Post Office.</p>
          <p>
             I attend Faith Baptist Church in Easley SC. My favorite website is  
             <a href="https://www.youtube.com/@shilohandbros">here</a>, and you can email me  
