--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@ h3 {
 <body>
     <div id="content">
         <h1>Jonathan Talley</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h2>Freshman from Berlin, Germany</h2>
         
-         <p>I am a freshman at Bob Jones University studying criminal justice with a minor in 
-            chemistry. I work for Public Safety as a traffic officer, and also for the BJU Post Office.</p>
+         <p>I am a freshman at Bob Jones University in Greenville SC studying criminal justice with a minor in 
+            chemistry. I work for Public Safety as a traffic officer, as well as for the BJU Post Office.</p>
          <p>
             I attend Faith Baptist Church in Easley SC. My favorite website is  
             <a href="https://www.youtube.com/@shilohandbros">here</a>, and you can email me  
             <a href="mailto:jtall965@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy music, sports and hanging out with my friends.
+            I enjoy music, writing, sports and hanging out with my friends.
          </p>
         <h3>EDUCATION</h3>
         Criminal Justice<br />
