--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ h3 {
             <a href="mailto:jtall965@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy music, writing, sports and hanging out with my friends.
+            I enjoy music, writing, sports, and hanging out with my friends.
          </p>
         <h3>EDUCATION</h3>
         Criminal Justice<br />
