--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@ h3 {
          <p>
             I enjoy music, writing, sports, and hanging out with my friends.
          </p>
+         <p> I currently serve as Athletic Director for the Chi Epsilon Delta Wolves Society.
+         </p>
         <h3>EDUCATION</h3>
         Criminal Justice<br />
         Bob Jones University<br />
+        <img src=xed20logo20simple.png>
+        <img/>
     </div>
 </body>
 </html>
