--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@ h3 {
         Criminal Justice<br />
         Bob Jones University<br />
         <img src="xed20logo20simple.png">
+            <style>
+                max-width: 500px
+            </style>
         <img/>
     </div>
 </body>
