--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@ h3 {
         <h3>EDUCATION</h3>
         Criminal Justice<br />
         Bob Jones University<br />
-        <img src="xed20logo20simple.png">
-            <style>
-                max-width: 500px
-            </style>
+        <img src="xed20logo20simple.png" width="500px">
         <img/>
     </div>
 </body>
