--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ h3 {
         <h3>EDUCATION</h3>
         Criminal Justice<br />
         Bob Jones University<br />
-        <img src="xed20logo20simple.png" width="500px">
+        <img src="xed20logo20simple.png" width="500px" margin="12px">
         <img/>
     </div>
 </body>
