--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h2 class="text-uppercase text-center text-secondary">Portfolio</h2>
             <hr class="star-dark mb-5">
             <div class="row text-center">
-                <div class="col"><a class="btn btn-secondary" role="button" href="#https://inkwellmagazine.com/one-autumn-day/"><i class="fa fa-newspaper-o text-white" style="font-size: 179px;"></i></a></div>
+                <div class="col"><a class="btn btn-secondary" role="button" href="https://inkwellmagazine.com/one-autumn-day/"><i class="fa fa-newspaper-o text-white" style="font-size: 179px;"></i></a></div>
             </div>
         </div>
     </section>
@@ -94,10 +94,10 @@
                 <div class="col-md-4 mb-5 mb-lg-0">
                     <h4 class="text-uppercase">Around the Web</h4>
                     <ul class="list-inline">
-                        <li class="list-inline-item"><a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="#https://www.facebook.com/profile.php?id=100010821096285"><i class="fa fa-facebook fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="#https://www.instagram.com/jtal02/"><i class="fa fa-instagram fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="#https://www.linkedin.com/in/john-talley-4507182b7/"><i class="fa fa-linkedin fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="#https://github.com/Jtall965"><i class="fa fa-github fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://www.facebook.com/profile.php?id=100010821096285"><i class="fa fa-facebook fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://www.instagram.com/jtal02/"><i class="fa fa-instagram fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://www.linkedin.com/in/john-talley-4507182b7/"><i class="fa fa-linkedin fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a class="btn btn-outline-light text-center btn-social rounded-circle" role="button" href="https://github.com/Jtall965"><i class="fa fa-github fa-fw"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
